--- a/aircraft_risk_analysis .ipynb
+++ b/aircraft_risk_analysis .ipynb
@@ -353,9 +353,95 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f9bd276f",
+   "metadata": {},
+   "source": [
+    "## Dataframe info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "11c1373c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 88889 entries, 0 to 88888\n",
+      "Data columns (total 31 columns):\n",
+      " #   Column                  Non-Null Count  Dtype  \n",
+      "---  ------                  --------------  -----  \n",
+      " 0   Event.Id                88889 non-null  object \n",
+      " 1   Investigation.Type      88889 non-null  object \n",
+      " 2   Accident.Number         88889 non-null  object \n",
+      " 3   Event.Date              88889 non-null  object \n",
+      " 4   Location                88837 non-null  object \n",
+      " 5   Country                 88663 non-null  object \n",
+      " 6   Latitude                34382 non-null  object \n",
+      " 7   Longitude               34373 non-null  object \n",
+      " 8   Airport.Code            50132 non-null  object \n",
+      " 9   Airport.Name            52704 non-null  object \n",
+      " 10  Injury.Severity         87889 non-null  object \n",
+      " 11  Aircraft.damage         85695 non-null  object \n",
+      " 12  Aircraft.Category       32287 non-null  object \n",
+      " 13  Registration.Number     87507 non-null  object \n",
+      " 14  Make                    88826 non-null  object \n",
+      " 15  Model                   88797 non-null  object \n",
+      " 16  Amateur.Built           88787 non-null  object \n",
+      " 17  Number.of.Engines       82805 non-null  float64\n",
+      " 18  Engine.Type             81793 non-null  object \n",
+      " 19  FAR.Description         32023 non-null  object \n",
+      " 20  Schedule                12582 non-null  object \n",
+      " 21  Purpose.of.flight       82697 non-null  object \n",
+      " 22  Air.carrier             16648 non-null  object \n",
+      " 23  Total.Fatal.Injuries    77488 non-null  float64\n",
+      " 24  Total.Serious.Injuries  76379 non-null  float64\n",
+      " 25  Total.Minor.Injuries    76956 non-null  float64\n",
+      " 26  Total.Uninjured         82977 non-null  float64\n",
+      " 27  Weather.Condition       84397 non-null  object \n",
+      " 28  Broad.phase.of.flight   61724 non-null  object \n",
+      " 29  Report.Status           82505 non-null  object \n",
+      " 30  Publication.Date        75118 non-null  object \n",
+      "dtypes: float64(5), object(26)\n",
+      "memory usage: 21.0+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "257ac805",
+   "metadata": {},
+   "source": [
+    "## Subset to work with selected rows\n",
+    "- Select the top 100 countries with airplane accidents and incidents "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4c6bdf56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the top 100 countries by accident and incident \n",
+    "top_countries = df['Country'].value_counts().index[:100]\n",
+    "\n",
+    "# Filter to only include rows where country is in top 100 list  \n",
+    "df = df[df['Country'].isin(top_countries)]\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2e1f6f2",
+   "id": "812c5188",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -363,7 +449,39 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11c1373c",
+   "id": "485f48e2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5170d49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "737711a7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40530a89",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "763cf877",
    "metadata": {},
    "outputs": [],
    "source": []
