--- a/aircraft_risk_analysis .ipynb
+++ b/aircraft_risk_analysis .ipynb
@@ -1047,17 +1047,197 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fc3e0863",
+   "metadata": {},
+   "source": [
+    "# Feature Engineering \n",
+    "- Adding new columns to enhance exploratory data analysis "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81b166dc",
+   "metadata": {},
+   "source": [
+    "### Create seasons columns \n",
+    "- Create season categories e.g winter, spring, etc\n",
+    "- This helps identify trends over time such as seasonal variations in accident rates "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "eb04876d",
+   "execution_count": 20,
+   "id": "3eea3c15",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Create a function to categorize seasons \n",
+    "def get_seasons(date):\n",
+    "    if date.month in [12, 1, 2]:\n",
+    "        return 'Winter'\n",
+    "    elif date.month in [3, 4, 5]:\n",
+    "        return 'Spring'\n",
+    "    elif date.month in [6, 7, 8]:\n",
+    "        return 'Summer'\n",
+    "        \n",
+    "    else:\n",
+    "        return 'Autum'\n",
+    "    \n",
+    "# Apply function \n",
+    "df['Season'] = df['Event.Date'].apply(get_seasons)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebf4dbfc",
+   "metadata": {},
+   "source": [
+    "### Damage severity index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4ac81272",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create dictionary to map aircraft damage \n",
+    "damage_severity = {\n",
+    "    'Destroyed': 3,\n",
+    "    'Substantial': 4,\n",
+    "    'Minor': 2,\n",
+    "    'Unknown': 1,\n",
+    "}\n",
+    "\n",
+    "# Apply mapping \n",
+    "df['aircraft_damage_severity'] = df['Aircraft.damage'].map(damage_severity)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9af98fc",
+   "metadata": {},
+   "source": [
+    "### Injury severity index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "262f4a78",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Injury severity \n",
+    "\n",
+    "df['injury_severity_index'] = (df['Total.Fatal.Injuries'] * 3) + (df['Total.Serious.Injuries'] * 2) + (df['Total.Minor.Injuries'] * 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9d840a33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Cruise', 'Unknown', 'Approach', 'Climb', 'Takeoff', 'Landing',\n",
+       "       'Taxi', 'Descent', 'Maneuvering', 'Standing', 'Go-around', 'Other'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Broad.phase.of.flight'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "23a6d90a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 88312 entries, 0 to 88888\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                    Non-Null Count  Dtype         \n",
+      "---  ------                    --------------  -----         \n",
+      " 0   event_id                  88312 non-null  object        \n",
+      " 1   investigation_type        88312 non-null  object        \n",
+      " 2   accident_number           88312 non-null  object        \n",
+      " 3   event_date                88312 non-null  datetime64[ns]\n",
+      " 4   country                   88312 non-null  object        \n",
+      " 5   aircraft_damage           88312 non-null  object        \n",
+      " 6   make                      88312 non-null  object        \n",
+      " 7   model                     88312 non-null  object        \n",
+      " 8   amateur_built             88312 non-null  object        \n",
+      " 9   number_of_engines         88312 non-null  float64       \n",
+      " 10  engine_type               88312 non-null  object        \n",
+      " 11  purpose_of_flight         88312 non-null  object        \n",
+      " 12  total_fatal_injuries      88312 non-null  float64       \n",
+      " 13  total_serious_injuries    88312 non-null  float64       \n",
+      " 14  total_minor_injuries      88312 non-null  float64       \n",
+      " 15  total_uninjured           88312 non-null  float64       \n",
+      " 16  weather_condition         88312 non-null  object        \n",
+      " 17  broad_phase_of_flight     88312 non-null  object        \n",
+      " 18  season                    88312 non-null  object        \n",
+      " 19  aircraft_damage_severity  88312 non-null  int64         \n",
+      " 20  injury_severity_index     88312 non-null  float64       \n",
+      "dtypes: datetime64[ns](1), float64(6), int64(1), object(13)\n",
+      "memory usage: 16.8+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert column names in the DataFrame to lowercase and replace '.' with '_'\n",
+    "df.columns = [col.lower().replace('.', '_') for col in df.columns]\n",
+    "df.info()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3ebfa0fd",
+   "metadata": {},
+   "source": [
+    "# Univariate Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63f60683",
+   "metadata": {},
+   "source": [
+    "**1. Top 5 countries with most accidents**\n",
+    "- Rank countries with most accidents "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "07ca3f60",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "countries = df['country'].value_counts().reset_index(name=\"Count\")[:10]\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b262857d",
+   "id": "08c35ecc",
    "metadata": {},
    "outputs": [],
    "source": []
